# space_physics_engine

./: .gitignore  Cargo.toml  README.md
examples/c/: Makefile  main.c
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/zig/: build.zig
examples/zig/src/: main.zig
integrations/c/: Cargo.toml
integrations/c/src/: lib.rs
src/: dso.rs  gravity.rs  lib.rs  pmo.rs  units.rs
src/safer-ffi-deactivate/: Cargo.toml
src/safer-ffi-deactivate/src/: lib.rs
src/util/: mod.rs
