[workspace]
members = ["examples/rust", "src/safer-ffi-deactivate"]

[workspace.package]
authors = ["Florian Stemmler"]
edition = "2021"
repository = "https://github.com/FlorianDevPhynix/space_physics_engine"

[workspace.dependencies]
space_physics_engine = { path = "." }

[package]
name = "space_physics_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "staticlib",# static C library
    #"cdylib",   # shared/dynamic C library (advanced)
    "lib",      # For `generate-headers`, `tests/`, doctests, and `examples/`
]

[dependencies]
thiserror = "1.0.49"
safer-ffi = "0.1.3"
safer-ffi-deactivate = { path = "src/safer-ffi-deactivate" }

[features]
#default = ["headers"]
headers = ["safer-ffi/headers", "ffi_compile"]
ffi_compile = ["safer-ffi-deactivate/ffi_compile"]
