[package]
name = "c_space_physics_engine"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
    "staticlib",# static C library
    #"cdylib",   # shared/dynamic C library (advanced)
    "lib",      # For `generate-headers`, `tests/`, doctests, and `examples/`
]

[dependencies]
safer-ffi = "0.1.3"

[features]
default = ["headers"]
headers = ["safer-ffi/headers"]
